# charliepi

./: .gitignore  Pipfile  README.md  app.py  charliepi_web.db  definitions.py  main.py  pyproject.toml
app/: app.py  camera.py  collect.py  led.py  sensor_data.py  sht_30.py
app/templates/: index.html
daemons/: install.py  sht30_recorder.py  sht30_recorder.service
lib/: camera.py  models.py
src/: sht30_recorder.py  web_app.py
src/lib/: camera.py  daemonize.py  daemonizer.py  healthchecks_pinger.py  led.py  models.py  setup_logging.py  sht30.py
src/templates/: index.html
templates/: index.html
web/: app.py
web/templates/: index.html
